Fixed overflowing on Galaxy Fold

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    margin: 15px;
 }
 
 main {
@@ -21,28 +22,29 @@ main {
     flex-direction: row;
     border-radius: 20px;
     box-shadow: 1px 15px 100px hsl(241, 100%, 89%);
+    margin: 0;
 }
 
 h1 {
-    font-size: 75px;
+    font-size: 5rem;
     margin: 0 auto;
     padding: 0px;
 }
 
 h2 {
-    font-size: 30px;
+    font-size: 1.7rem;
     font-weight: 500;
 }
 
 h3 {
-    font-size: 25px;
-    padding: 35px;
+    font-size: 1.4rem;
+    padding: 2.2rem;
     margin: 0px;
     opacity: 60%;
 }
 
 p, td {
-    font-size: 15px;
+    font-size: 1rem;
     margin: 0 auto;
     margin: 0px auto;
 }
@@ -124,9 +126,12 @@ td {
 }
 
 button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: "Hanken Grotesk";
     padding: 0 35px;
-    margin: 25px 35px;
+    margin: 25px auto;
     height: 50px;
     width: 80%;
     border: 1px solid white;
@@ -143,24 +148,27 @@ button {
 }
 
 footer {
-    margin-top: auto;
-    padding-top: 0px;
+    bottom: 0;
+    padding-top: 20px;
     text-align: center;
     opacity: 90%;
+    margin: 2%;
     color: hsla(224, 30%, 27%, 0.855);
 }
 
 @media only screen and (max-width: 530px) {
 
     .component {
+      box-sizing: border-box;  
       flex-direction: column;
       width: 100vw;
       box-shadow: none;
       position: relative;
       top: -25px;
+      background: white;]
     }
 
-    main {
+    body, main {
         margin: 0;
     }
 
